// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content 1 should change correctly 1`] = `
<div>
  <div
    class="HW12"
  >
    <div
      class="tag1 choice"
    >
      tag1
    </div>
    <div
      class="tag2 "
    >
      tag2
    </div>
    <div
      class="tag3 "
    >
      tag3
    </div>
    <div
      class="tag4 "
    >
      tag4
    </div>
    <div
      class="content"
    >
      lorem 1
    </div>
  </div>
</div>
`;

exports[`content 2 should change correctly 1`] = `
<div>
  <div
    class="HW12"
  >
    <div
      class="tag1 "
    >
      tag1
    </div>
    <div
      class="tag2 choice"
    >
      tag2
    </div>
    <div
      class="tag3 "
    >
      tag3
    </div>
    <div
      class="tag4 "
    >
      tag4
    </div>
    <div
      class="content"
    >
      lorem 2
    </div>
  </div>
</div>
`;

exports[`content 3 should change correctly 1`] = `
<div>
  <div
    class="HW12"
  >
    <div
      class="tag1 "
    >
      tag1
    </div>
    <div
      class="tag2 "
    >
      tag2
    </div>
    <div
      class="tag3 choice"
    >
      tag3
    </div>
    <div
      class="tag4 "
    >
      tag4
    </div>
    <div
      class="content"
    >
      lorem 3
    </div>
  </div>
</div>
`;

exports[`content 4 should change correctly 1`] = `
<div>
  <div
    class="HW12"
  >
    <div
      class="tag1 "
    >
      tag1
    </div>
    <div
      class="tag2 "
    >
      tag2
    </div>
    <div
      class="tag3 "
    >
      tag3
    </div>
    <div
      class="tag4 choice"
    >
      tag4
    </div>
    <div
      class="content"
    >
      lorem 4
    </div>
  </div>
</div>
`;
